--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    background-color: black !important;
+    font-family: 'Poppins' !important;
+    color:white !important;
+    padding: 2em;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .enlace {
+    margin: 10px;
+    text-decoration: none;
+    color: white !important;
+    font-weight: 500;
   }
-  to {
-    transform: rotate(360deg);
+  .enlace:hover {
+    color: red !important;
   }
-}
+  
+  /* Estilo para la barra horizontal */
+  hr {
+    width: 100% !important;
+  }
+  
